--- a/style.css
+++ b/style.css
@@ -622,15 +622,27 @@ form .form_footer{
 .contact_cont .con_right{
     width: 50%;
     display: flex;
-    align-self: center;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
-.con_right .image{
+.contact_cont .con_right .sub_cont{
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
-.con_right .image img{
-    width: 100%;
+
+.contact_cont .con_right .sub_cont .per_link{
+    margin: 10px 0px;
 }
+
+.sub_cont .per_link i{
+    font-size: 22px;
+    margin-right: 10px;
+}
+
+.sub_cont .per_link a{
+    font-size: 18px;
+}
+
 
 
 
@@ -681,6 +693,13 @@ form .form_footer{
 }
 
 @media  (max-width:920px){
+    .con_right .sub_cont .per_link{
+        display: flex;
+    }
+
+    .sub_cont .per_link a{
+        font-size: 16px;        
+    }
     .container{
         height: 50%;
     }
