--- a/style.css
+++ b/style.css
@@ -25,13 +25,16 @@ nav ul li{
     transition: .3s;
 }
 
-nav ul li:hover{
-    transform: scale(1.1);
-}
+
 
 nav ul li a{
     font-weight: bold;
     font-size: 18px;
+    transition: .3s;
+}
+
+nav ul li a:hover{
+    color: #000;
 }
 
 a{
