--- a/style.css
+++ b/style.css
@@ -495,6 +495,7 @@ p{
 
 .ab_right p{
     margin: 10px 0px;
+    line-height: 20px;
 }
 .ab_right .ab_footer{
     width: 100%;
@@ -502,7 +503,7 @@ p{
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     flex-wrap: wrap;
 }
 
@@ -676,6 +677,21 @@ form .form_footer{
 }
 .button a:hover{
     background-color: #563434;
+}
+
+
+.con_right .cont_content{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.cont_content p{
+    color: #555;
+    line-height: 20px;
+}
+
+.cont_content h3{
+    margin-bottom: 10px;
+    color: #222;
 }
 
 
